--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -26,7 +26,7 @@
           <p> <a href="/events"> Events </a> </p>
         </div>
         <div class="navbarattribute">
-          <p> Spaces </p>
+          <p> <a href="/spaces"> Spaces </a> </p>
         </div>
         <div class="navbarattribute">
           <p> Store </p>
