--- a/views/spaces_tr2.hbs
+++ b/views/spaces_tr2.hbs
@@ -2,25 +2,62 @@
   <div class="spacesPictures">
     <div class="spacesPicturesRowOne">
       <div>
-        <a href="/spaces/tr1"> <img src="Images/SpacesImage/headerTr1.png" alt="Photo of Theme Room 1"> </a>
+        <a href="/spaces"> <img src="/Images/SpacesImage/headerTr1.png" alt="Photo of Theme Room 1"> </a>
       </div>
       <div>
-        <a href="/spaces/tr2"> <img src="Images/SpacesImage/headerTr2.jpg" alt="Photo of Theme Room 2"> </a>
+        <a href="/spaces/tr2"> <img src="/Images/SpacesImage/headerTr2.jpg" alt="Photo of Theme Room 2"> </a>
       </div>
       <div>
-        <img src="Images/SpacesImage/headerCtph.png" alt="Photo of CTPH">
+        <a href="/spaces/ctph"> <img src="/Images/SpacesImage/headerCtph.png" alt="Photo of CTPH"> </a>
       </div>
     </div>
     <div class="spacesPicturesRowTwo">
       <div>
-        <img src="Images/SpacesImage/amphitheatre.jpg" alt="USP Amphitheatre">
+        <a href="/spaces/amphitheatre"> <img src="/Images/SpacesImage/amphitheatre.jpg" alt="USP Amphitheatre"> </a>
       </div>
       <div>
-        <img src="Images/SpacesImage/headerProto.jpg" alt="USP proto center">
+        <a href="/spaces/proto"> <img src="/Images/SpacesImage/headerProto.jpg" alt="USP proto center"> </a>
       </div>
       <div>
-        <img src="Images/SpacesImage/chatterbox.jpg" alt="USP Chatterbox">
+        <a href="/spaces/chatterbox"> <img src="/Images/SpacesImage/chatterbox.jpg" alt="USP Chatterbox"> </a>
       </div>
     </div>
+  </div>
+  <div style="background-color:#ff9c08;">
+    <h2 text-align="center"> Theme Room 2 @ South Learn Lobe </h2>
+  </div>
+  <div class="tr2Info">
+    <p> Theme Room 2 is recreational space which is made available for the USP community.
+        It space is designed to games and communal bonding. It comes with a Foosball
+        Table and Xbox 360 with Kinect Games. It also holds a wall decorated by
+        the various houses of USC giving you a glimpse of the community life. </p>
+    <p> The Theme Room 2 is managed by the University Scholars Club (USC).
+        Reservation is made available only to USC interest groups and USP
+        affiliated groups. </p>
+    <p> <b> Terms of Use </b> </p>
+    <ol>
+      <li> Theme room are opened to all USP student on a first come first serve basis.
+           All students are encourage to co-share the communal space with one another. </li>
+      <li> Theme room can only be booked for official meetings or events held by the following groups: </li>
+      <ul>
+        <li> USC Committees </li>
+        <li> USC Houses </li>
+        <li> USC Interest Groups </li>
+        <li> Groups & Programmes officially affiliated with USP </li>
+      </ul>
+      <li> Booking of the Theme Room can be made through USC Website at least 3 days in advance. </li>
+      <li> Theme room cannot be booked for non-USC related purposes including, but not limited to: </li>
+      <ul>
+        <li> Study sessions </li>
+        <li> School project meetings </li>
+        <li> Personal events </li>
+      </ul>
+      <li> All bookings will be suspended during the exam period,
+           beginning from reading week until the last day of each semester. </li>
+      <li> At all times, food & drinks are not allowed in the Theme Room.
+           Please be considerate users and pack up the Theme Rooms after use. </li>
+    </ol>
+    <p> <b> Note: </b> Booking will only be reflected in the calendar below after it
+        is approved by the Space Owner. Please check your own dashboard for booking status. </p>
   </div>
 </div>
