--- a/views/spaces.hbs
+++ b/views/spaces.hbs
@@ -2,24 +2,24 @@
   <div class="spacesPictures">
     <div class="spacesPicturesRowOne">
       <div>
-        <a href="/spaces/tr1"> <img src="Images/SpacesImage/headerTr1.png" alt="Photo of Theme Room 1"> </a>
+        <a href="/spaces"> <img src="Images/SpacesImage/headerTr1.png" alt="Photo of Theme Room 1"> </a>
       </div>
       <div>
         <a href="/spaces/tr2"> <img src="Images/SpacesImage/headerTr2.jpg" alt="Photo of Theme Room 2"> </a>
       </div>
       <div>
-        <img src="Images/SpacesImage/headerCtph.png" alt="Photo of CTPH">
+        <a href="/spaces/ctph"> <img src="Images/SpacesImage/headerCtph.png" alt="Photo of CTPH"> </a>
       </div>
     </div>
     <div class="spacesPicturesRowTwo">
       <div>
-        <img src="Images/SpacesImage/amphitheatre.jpg" alt="USP Amphitheatre">
+        <a href="/spaces/amphitheatre"> <img src="Images/SpacesImage/amphitheatre.jpg" alt="USP Amphitheatre"> </a>
       </div>
       <div>
-        <img src="Images/SpacesImage/headerProto.jpg" alt="USP proto center">
+        <a href="/spaces/proto"> <img src="Images/SpacesImage/headerProto.jpg" alt="USP proto center"> </a>
       </div>
       <div>
-        <img src="Images/SpacesImage/chatterbox.jpg" alt="USP Chatterbox">
+        <a href="/spaces/chatterbox"> <img src="Images/SpacesImage/chatterbox.jpg" alt="USP Chatterbox"> </a>
       </div>
     </div>
   </div>
