--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -29,7 +29,7 @@
           <p> <a href="/spaces"> Spaces </a> </p>
         </div>
         <div class="navbarattribute">
-          <p> Store </p>
+          <p> <a href="/store"> Store </a> </p>
         </div>
         <div class="navbarattribute">
           <p> Contact Us </p>
