Completed the store page

--- a/views/store.hbs
+++ b/views/store.hbs
@@ -1,3 +1,55 @@
 <div class="store">
-  
+  <div>
+    <img src="Images/headerStore.jpg" alt="Store page header" width="100%" height="356px">
+  </div>
+  <div style="background-color:#ff9c08">
+    <h1 text-align="center"> Merchandise Store </h1>
+    <p text-align="center"> Please contact Merchandise Team for any purchase </p>
+  </div>
+  <div class="merchandisestore">
+    <img src="Images/StoreImage/USPirit T-Shirt 010320151138.jpg" class="merchandisestore">
+    <div class="merchInfo" style="background-color:#002a90" width="100px">
+      <h6> USPirit T-Shirt ($12) </h6>
+      <p> A perennial favourite of USP students young and old, this T-Shirt
+          is always the first to run out of stock! </p>
+    </div>
+  </div>
+  <div class="merchandisestore">
+    <img src="Images/StoreImage/Circle Logo T-Shirt 020320151202.jpg" alt="USP Circular Logo" class="merchandisestore">
+    <div class="merchInfo" style="background-color:#002a90">
+      <h6> I'm a Hipster T-Shirt ($12) </h6>
+      <p> Channel your inner hipster with this ultra cool tee. </p>
+    </div>
+  </div>
+  <div class="merchandisestore">
+    <img src="Images/StoreImage/Eclairs T-Shirt 020320151211.jpg" alt="Eclairs USP Logo" class="merchandisestore">
+    <div class="merchInfo" style="background-color:#002a90">
+      <h6> Food for Thought T-Shirt ($12) </h6>
+      <p> 'Are there eclairs?' is a question many students ask at USP
+          events - so of course we had to get a shirt with eclairs on it! Reprints coming soon! </p>
+    </div>
+  </div>
+  <div class="merchandisestore">
+    <img src="Images/StoreImage/Cat T-Shirt 020320151223.jpg" alt="USP Inquisitive Cat" class="merchandisestore">
+    <div class="merchInfo" style="background-color:#002a90">
+      <h6> Curiosity Killed the Cat T-Shirt ($12) </h6>
+      <p> Did you know that this adorable tee was inspired by the phrase
+          'curiosity killed the cat'? </p>
+    </div>
+  </div>
+  <div class="merchandisestore">
+    <img src="Images/StoreImage/University Scholars Programme T-Shirt 020320151233.jpg" class="merchandisestore">
+    <div class="merchInfo" style="background-color:#002a90">
+      <h6> University Scholars Programme T-Shirt ($12) </h6>
+      <p> This shirt is a visual representation on the many aspects of USP life. Reprints coming soon! </p>
+    </div>
+  </div>
+  <div class="merchandisestore">
+    <img src="Images/StoreImage/Uspirit Hoodie 020320151249.jpg" alt="USP Hoodie" class="merchandisestore">
+    <div class="merchInfo" style="background-color:#002a90">
+      <h6> USPirit Jacket ($30) </h6>
+      <p> Can't get enough of the USPirit? We hear you! Here's an USPirit jacket
+          to keep you warm and toasty in classes. </p>
+    </div>
+  </div>
 </div>
