Created a contact_us page with relevant routes

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -32,7 +32,7 @@
           <p> <a href="/store"> Store </a> </p>
         </div>
         <div class="navbarattribute">
-          <p> Contact Us </p>
+          <p> <a href="/contact_us"> Contact Us </a> </p>
         </div>
         <form action="/" method="get">
           <div class="login">
