Finished creating the contact_us view

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -201,3 +201,8 @@ a {
   text-align: left;
   color: white;
 }
+
+/* Attributes pertaining to the contact_us page. */
+.contact_us p {
+  text-align: left;
+}
