--- a/views/contact_us.hbs
+++ b/views/contact_us.hbs
@@ -1,2 +1,32 @@
 <div class="contact_us">
+  <div>
+    <img src="Images/headerContactUs.jpg" height="356px" width="100%">
+  </div>
+  <div style="background-color:#ff9c08">
+    <h3> General Enquires </h3>
+  </div>
+  <div>
+    <p> If you have any queries or questions regarding the University Scholars
+        Club and would like to speak to someone, please email usc.hongensec@u.nus.edu. <p>
+    <p> <b> NUS Students' University Scholars Club </b> <br>
+        National University of Singapore <br>
+        Cinnamon College, University Town <br>
+        18 College Avenue East S138593 <p>
+  </div>
+  <div style="background-color:#002a90">
+    <h3 style="color: white"> Sponsorship & Finance </h3>
+  </div>
+  <div>
+    <p> If you’d like to sponsor activities organised by us, please contact our
+        finance team at usc.honfinsec@u.nus.edu. Thank you for your interest in
+        helping to make our events a success! </p>
+  </div>
+  <div style="background-color:#ff9c08">
+    <h3> Freshmen Orientation Programme Matters </h3>
+  </div>
+  <div>
+    <p> Hey! Welcome onboard the family, we have a series of events lined up
+        for you. If you any queries, please feel free to email our Freshmen
+        Orientation Director at usc.fopdir@u.nus.edu. </p>
+  </div>
 </div>
