--- a/views/about_us.hbs
+++ b/views/about_us.hbs
@@ -1,7 +1,7 @@
 <div class="about_us">
   <div>
     <img src="Images/headerAboutUs.jpg" alt="USP Header Image" height="356px" width="100%">
-  </div>
+  </div> <br>
   <div class="about_us_text">
     <p class="about_us_text" align="left"> The University Scholars Club (USC) is a
       community of students enrolled in the National University of Singapore (NUS)
@@ -87,11 +87,11 @@
           <p> Headed by Tham Jun Han, President </p>
         </div>
         <div>
-          <b align="left"> Communications Secretary </b>
-          <p> Royston Chua </p>
-          <b> Communications Team </b>
-          <p> Koh Kai Qian, Nur Ridhuan </p>
-          <b> Alumni Relations Officer </b>
+          <b> <p> Communications Secretary </p> </b>
+          <p> Royston Chua </p> <br>
+          <b> <p> Communications Team </p> </b>
+          <p> Koh Kai Qian, Nur Ridhuan </p> <br>
+          <b> <p> Alumni Relations Officer </p> </b>
           <p> Shien Hian Lim & Marcus Ng <p>
         </div>
       </div>
@@ -105,13 +105,13 @@
         <p> Headed by Tee Shu Yun, Vice-President (Community Life) </p>
       </div>
       <div>
-        <b> Deputy Directors (Community Life) </b>
-        <p> Tan Yan Tyng & Joyce Foo </p>
-        <b> Sports Director </b>
-        <p> Jeremy Png </p>
-        <b> IG Coordinators </b>
-        <p> Edward Goh (Sports) & Andrea Tan (Non-Sports) <p>
-        <b> GUI Coordinators </b>
+        <b> <p> Deputy Directors (Community Life) </p> </b>
+        <p> Tan Yan Tyng & Joyce Foo </p> <br>
+        <b> <p> Sports Director </p> </b>
+        <p> Jeremy Png </p> <br>
+        <b> <p> IG Coordinators </p> </b>
+        <p> Edward Goh (Sports) & Andrea Tan (Non-Sports) <p> <br>
+        <b> <p> GUI Coordinators </p> </b>
         <p> Kathy Tan (Social, Cultural & Sports) </p>
         <p> Jazreel Low (Social, Cultural & Sports) </p>
         <p> Loh Xiang Bin (Welfare & Acad) & Teoh Xin Yi (Community Service) </p>
@@ -126,29 +126,197 @@
         <p> Headed by Woo Qiyun, Vice-President (Welfare) </p>
       </div>
       <div>
-        <b> Director (Welfare Projects) </b>
-        <p> Wan Nur Syafiqa B Syed Yusoff </p>
-        <b> Deputy Directors (Welfare Projects) </b>
-        <p> Charmaine Lee & Sanchita Sachdev </p>
-        <b> Welfare Projects Team </b>
+        <b> <p> Director (Welfare Projects) </p> </b>
+        <p> Wan Nur Syafiqa B Syed Yusoff </p> <br>
+        <b> <p> Deputy Directors (Welfare Projects) </p> </b>
+        <p> Charmaine Lee & Sanchita Sachdev </p> <br>
+        <b> <p> Welfare Projects Team </p> </b>
         <p> Ong Ci Wen, Jaymee Mariano Justiniano, Melanie Chng, <p>
         <p> Wee Su-Ann, Jasmie Liew, Kagen Lim, </p>
-        <p> Jade Ng & Lee Chun Min </p>
-        <b> Academic Director </b>
-        <p> Atharv Joshi </p>
-        <b> Academic Team </b>
+        <p> Jade Ng & Lee Chun Min </p> <br>
+        <b> <p> Academic Director </p> </b>
+        <p> Atharv Joshi </p> <br>
+        <b> <p> Academic Team </p> </b>
         <p> Melvin Soh, Deter Thng, </p>
-        <p> Devesh Narayanan & Loh Xiang Bin </p>
-        <b> Directors (Residential Welfare) </b>
-        <p> Wang Chiew Hui (Spaces) & Pang Chee Him (Dining Hall) </p>
-        <b> Residential Welfare Team </b>
-        <p> Seah Wan Yu & Philina Lai </p>
-        <b> House Captains </b>
+        <p> Devesh Narayanan & Loh Xiang Bin </p> <br>
+        <b> <p> Directors (Residential Welfare) </p> </b>
+        <p> Wang Chiew Hui (Spaces) & Pang Chee Him (Dining Hall) </p> <br>
+        <b> <p> Residential Welfare Team </p> </b>
+        <p> Seah Wan Yu & Philina Lai </p> <br>
+        <b> <p> House Captains </p> </b>
         <p> Gerald Seet (Ursaia), Kelvin Neo (Nocturna), Engracia Loh (Ianthe), </p>
-        <p> Myat Thu Kyaw (Triton), Ng Jingrong (Ankaa), Arnold Teo (Saren) </p>
-        <b> Coordinating Director (Interhouse Events) </b>
+        <p> Myat Thu Kyaw (Triton), Ng Jingrong (Ankaa), Arnold Teo (Saren) </p> <br>
+        <b> <p> Coordinating Director (Interhouse Events) </p> </b>
         <p> Tan Kit Yung </p>
       </div>
+    </div>
+    <div class="managementcomrowtwo">
+      <div>
+        <img src="Images/USC_secretariat.jpg" alt="USP Secretariat Committee" height="294px" width="433px">
+      </div>
+      <div style="background-color:#ff9c08">
+        <h1> Secretariat Committee </h1>
+        <p> Headed by Jeremy Jee, Honorary General Secretary </p>
+      </div>
+      <div>
+        <b> <p> Spaces Design Team </p> </b>
+        <p> Matthew Lee (Lead), Chia Yu Xuan (Lead), <br>
+            Chu Khoon Hwa & Andrea Tan </p> <br>
+        <b> <p> Visual Design Team </p> </b>
+        <p> Carina Lim (Lead), <br>
+            Vandhana Jeyaram, Dong Yunfan, & Andrea Tan </p> <br>
+        <b> <p> Operations Manager </p> </b>
+        <p> Gwyneth Cheng <p> <br>
+        <b> <p> Technology Development Team </p> </b>
+        <p> Yuan Yuchuan (Lead), <br>
+            Varun Patro, Ahan Gupta, Sean Ng, <br>
+            Low Yew Woei & Chik Cheng Yao </p>
+      </div>
+    </div>
+    <div class="managementcomrowtwo">
+      <div>
+        <img src="Images/USC_financecomm.jpg" alt="USP Finance Committee" height="294px" width="433px">
+      </div>
+      <div style="background-color:#ff9c08">
+        <h1> Finance Committee </h1>
+        <p> Headed by Melissa Tang, Honorary Financial Secretary </p>
+      </div>
+      <div>
+        <b> <p> Deputy Honorary Financial Secretary </p> </b>
+        <p> Maria Teresa Boey </p> <br>
+        <b> <p> Business Development Executives </p> </b>
+        <p> Low Yew Woei (External) & Rachel Thomas (Internal) </p> <br>
+        <b> <p> Marketing Executives </p> </b>
+        <p> Ng Shi Kai & Michelle Quek <p> <br>
+        <b> <p> Financial Attaches </p> </b>
+        <p> Quek Siying (Secretariat & Public Relations), <br>
+            Pang Chee Him (Welfare) & Andrea Chou Lim (Community Life) </p>
+      </div>
+    </div>
+    <div class="managementcomrowtwo">
+      <div>
+        <img src="Images/USC_fopcomm.jpg" alt="USP FOP Committee" height="294px" width="433px">
+      </div>
+      <div style="background-color:#ff9c08">
+        <h1>  FOP Committee </h1>
+        <p> Headed by Zhang Quyi, Freshmen Orientation Director </p>
+      </div>
+      <div>
+        <b> <p> Deputy Director </p> </b>
+        <p> Annina Zhang </p> <br>
+        <b> <p> Directors </p> </b>
+        <p> Jazreel Low (Finance), Joyce Yeo (Creative), <br>
+            Merilynn Seng (Public Relations) & Jesmine Woon (Operations) </p> <br>
+        <b> <p> Project Directors </p> </b>
+        <p> Beatrice Low (Camp), Jenn (O’Week), Kathy Tan (Events), <br>
+            Jadyn Teo (Batch Project) & Teoh Xinyi (Community Engagement) <p>
+      </div>
+    </div>
+  </div>
+  <div class="housecoms">
+    <div style="background-color:#002a90">
+      <h3 text-align="center" style="color:white"> House Committees </h3>
+    </div>
+    <div class="housecomrowone">
+      <img src="Images/House_Ursaia.jpg" width="433px" height="294px">
+      <div style="background-color:#ff9c08">
+        <h4> Ursaia </h4>
+      </div>
+      <div>
+        <b> <p> House Captain </p> </b>
+        <p> Gerald Set </p> <br>
+        <b> <p> Vice House Captain </p> </b>
+        <p> Pratyay Jaidev </p> <br>
+        <b> <p> Chief Orientation Group Leader </p> </b>
+        <p> Taira Robles </p> <br>
+        <b> <p> Vice Orientation Group Leader </p> </b>
+        <p> Samantha Rin </p>
+      </div>
+    </div>
+    <div class="housecomrowone">
+      <img src="Images/House_Nocturna.jpg" width="433px" height="294px">
+      <div style="background-color:#ff9c08">
+        <h4> Nocturna </h4>
+      </div>
+      <div>
+        <b> <p> House Captain </p> </b>
+        <p> Kelvin Neo </p> <br>
+        <b> <p> Vice House Captain </p> </b>
+        <p> Oh Pei Shan </p> <br>
+        <b> <p> Chief Orientation Group Leader </p> </b>
+        <p> Gordon Chua </p> <br>
+        <b> <p> Vice Orientation Group Leader </p> </b>
+        <p> Lee Weiqi </p>
+      </div>
+    </div>
+    <div class="housecomrowone">
+      <img src="Images/House_Ianthe.jpg" width="433px" height="294px">
+      <div style="background-color:#ff9c08">
+        <h4> Ianthe </h4>
+      </div>
+      <div>
+        <b> <p> House Captain </p> </b>
+        <p> Engracia Loh Qian Ying </p> <br>
+        <b> <p> Vice House Captain </p> </b>
+        <p> Chik Cheng Yao </p> <br>
+        <b> <p> Chief Orientation Group Leader </p> </b>
+        <p> Clara Lim Pei Ying </p> <br>
+        <b> <p> Vice Orientation Group Leader </p> </b>
+        <p> Yap Joon Kiat Mitchell </p>
+      </div>
+    </div>
+    <div class="housecomrowtwo">
+      <img src="Images/House_Triton.jpg" width="433px" height="294px">
+      <div style="background-color:#ff9c08">
+        <h4> Triton </h4>
+      </div>
+      <div>
+        <b> <p> House Captain </p> </b>
+        <p> Myat Thu Kyaw </p> <br>
+        <b> <p> Vice House Captain </p> </b>
+        <p> Lee Chun Min </p> <br>
+        <b> <p> Chief Orientation Group Leader </p> </b>
+        <p> Chng Hui Ru Melanie </p> <br>
+        <b> <p> Vice Orientation Group Leader </p> </b>
+        <p> Nikita Gupta </p>
+      </div>
+    </div>
+    <div class="housecomrowtwo">
+      <img src="Images/House_Ankaa.jpg" width="433px" height="294px">
+      <div style="background-color:#ff9c08">
+        <h4> Ankaa </h4>
+      </div>
+      <div>
+        <b> <p> House Captain </p> </b>
+        <p> Ng Jingrong </p> <br>
+        <b> <p> Vice House Captain </p> </b>
+        <p> Nadine Quah </p> <br>
+        <b> <p> Chief Orientation Group Leader </p> </b>
+        <p> Mohd Asyraf Zaidi </p> <br>
+        <b> <p> Vice Orientation Group Leader </p> </b>
+        <p> Kew Yu Jing </p>
+      </div>
+    </div>
+    <div class="housecomrowtwo">
+      <img src="Images/House_Saren.jpg" width="433px" height="294px">
+      <div style="background-color:#ff9c08">
+        <h4> Saren </h4>
+      </div>
+      <div>
+        <b> <p> House Captain </p> </b>
+        <p> Teo Kun Ho Arnold </p> <br>
+        <b> <p> Vice House Captain </p> </b>
+        <p> Teo Xi Hui </p> <br>
+        <b> <p> Chief Orientation Group Leader </p> </b>
+        <p> Jasmine Liew Yee Theng </p> <br>
+        <b> <p> Vice Orientation Group Leader </p> </b>
+        <p> Cheung Wai Him Samantha </p>
+      </div>
+    </div>
+  </div>
+  <div class="interestGroups">
+    <div style="background-color:#002a90">
+      <h3 style="color:white"> Interest Groups </h3>
     </div>
   </div>
 </div>
