Created a user model as well as an index controller

--- a/views/about_us.hbs
+++ b/views/about_us.hbs
@@ -314,9 +314,103 @@
       </div>
     </div>
   </div>
-  <div class="interestGroups">
-    <div style="background-color:#002a90">
-      <h3 style="color:white"> Interest Groups </h3>
+  <div class="interestGroups" style="background-color:#002a90">
+    <h3 style="color:white"> Interest Groups </h3>
+  </div>
+  <div class="interestGroupInformation">
+    <div class="igRowOne">
+      <div class="igEntry">
+        <div class="igHeader">
+          <h3> (f)USball </h3>
+        </div>
+        <div class="igBody">
+          <p> (f)USball is the IG for all foosball lovers! Foosball is a fancy
+              name for table soccer which frankly came about quite randomly. We
+              learn from each other, from youtube and from accidental goals. Game
+              sessions are mostly spur of the moment or coincidental, lasting from
+              10 minutes to hours, although Tuesday nights are fairly regular
+              foosball nights. Cynics scoff at the idea of foosball being a sport,
+              but come on down and see for yourself! </p>
+        </div>
+      </div>
+      <div class="igEntry">
+        <div class="igHeader">
+          <h3> Dance Interest Group </h3>
+        </div>
+        <div class="igBody">
+          <p> Dance Interest Group or DIG in short, was established in 2012 and
+              provides a platform for USP students to enjoy dance sessions from
+              a wide array of genres made available. DIG provides an open
+              platform for anyone interested in dancing and learning new dance
+              styles to join us, without the need to commit to any formal attendance.
+              DIG will engage from its pool of student choreographers and instructors
+              to conduct dance sessions from a specific dance genre selected for
+              that week. DIG’s inaugural performance was at the 2013 USP FOP Camp
+              Finale, a lyrical hip hop piece. </p>
+        </div>
+      </div>
+      <div class="igEntry">
+        <div class="igHeader">
+          <h3> Gender Collective </h3>
+        </div>
+        <div class="igBody">
+          <p> Gender Collective is an interest group that seeks to draw together
+              people of all genders and sexual identities, for discussion in a
+              safe space. We aim to generate discussion about gender and sexuality
+              and how they intersect with other modes of living, learning and being
+              in NUS, Singapore, and the world. We also hope to organise events
+              that allow our members to feel a sense of community and support,
+              including casual dinners, sharing sessions, trips to drag shows and more! </p>
+        </div>
+      </div>
+    </div>
+    <div class="igRowTwo">
+      <div class="igEntry">
+        <div class="igHeader">
+          <h3> Heroes of the RC </h3>
+        </div>
+        <div class="igBody">
+          <p> An interest group for people interested in eSports (especially
+              the game Heroes of the Storm) and video games in general. </p>
+        </div>
+      </div>
+      <div class="igEntry">
+        <div class="igHeader">
+          <h3> International Chess </h3>
+        </div>
+        <div class="igBody">
+          <p> A gathering of people enthusiastic about playing international
+              chess, both for leisure and for competing in IFG and ICG! </p>
+        </div>
+      </div>
+      <div class="igEntry">
+        <div class="igHeader">
+          <h3> LiveCore </h3>
+        </div>
+        <div class="igBody">
+          <p> For anyone who likes music or likes playing music- and who doesn’t?
+              Meet other musicians, develop and experiment with your musicality,
+              and showcase your skills at USP events and internal concerts.
+              Even if you don't have any musical background, you can (and should)
+              still join us to hang out, talk music, share ideas and have fun.
+              We also offer basic lessons to get you started if you're interested! </p>
+        </div>
+      </div>
+    </div>
+    <div class="igRowThree">
+      <div class="igEntry">
+        <div class="igHeader">
+          <h3> Mindfulness </h3>
+        </div>
+        <div class="igBody">
+          <p> Breathe...... Are you here in this present moment while reading this
+              description? Mindfulness is a practice, habit and lifestyle that we
+              have lost or emphasised little in the state of busyness. As a
+              result, we have become caught up, overwhelmed and stressed by our
+              perceptions of life. Take a deep breath and experience more ways to
+              be present with us </p>
+        </div>
+      </div>
     </div>
   </div>
 </div>
