--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -34,7 +34,7 @@
         <div class="navbarattribute">
           <p> <a href="/contact_us"> Contact Us </a> </p>
         </div>
-        <form action="/" method="get">
+        <form action="/" method="POST">
           <div class="login">
             <input type="submit" value="Login">
           </div>
