--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -130,6 +130,51 @@ a {
   text-align: left;
   margin-bottom: 5px;
 }
+
+.interestGroupInformation {
+  background-color: #f2f2f2;
+}
+
+.igRowOne {
+  float: left;
+}
+
+.igEntry {
+  width: 390px;
+  height: 370px;
+  margin: 20px;
+  background-color: white;
+}
+
+.igRowOne .igEntry {
+  display: inline-block;
+}
+
+.igEntry p {
+  text-align: left;
+  font-family: 'Lato', sans-serif;
+  font-size: 14px;
+}
+
+.igHeader {
+  background-color: #ff9c08;
+}
+
+.igRowTwo .igEntry {
+  display: inline-block;
+}
+
+.igRowTwo {
+  float: left;
+}
+
+.igRowThree .igEntry {
+  display: inline-block;
+}
+
+.igRowThree {
+  float: left;
+}
 /* Attributes pertaining to the events page */
 .pasteventsrowone {
   width: 100%;
